--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "electron": "^33.0.1",
     "electron-reloader": "^1.2.3"
+  },
+  "dependencies": {
+    "undoredo.js": "^1.2.0"
   }
 }
