--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stratos",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
