--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "stratos",
   "version": "1.0.0",
   "main": "main.js",
-  "type": "module",
   "scripts": {
-    "start": "electron .",
+    "start": "ts-node ./node_modules/electron/cli.js .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jermel Lapaz",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "electron": "^33.0.1",
-    "electron-reloader": "^1.2.3"
+    "electron-reloader": "^1.2.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "undoredo.js": "^1.2.0"
