--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-reloader": "^1.2.3"
   },
   "dependencies": {
+    "electron-prompt": "^1.7.0",
     "undoredo.js": "^1.2.0"
   }
 }
