Added grammar markdown file

--- a/package.json
+++ b/package.json
@@ -3,19 +3,30 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Jermel Lapaz",
   "license": "ISC",
-  "description": "",
+  "description": "IDE for custom language, Robas",
   "devDependencies": {
+    "@electron-forge/cli": "^7.6.0",
+    "@electron-forge/maker-deb": "^7.6.0",
+    "@electron-forge/maker-rpm": "^7.6.0",
+    "@electron-forge/maker-squirrel": "^7.6.0",
+    "@electron-forge/maker-zip": "^7.6.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
+    "@electron-forge/plugin-fuses": "^7.6.0",
+    "@electron/fuses": "^1.8.0",
     "electron": "^33.0.1",
     "electron-reloader": "^1.2.3"
   },
   "dependencies": {
     "@jarboer/electron-prompt": "^2.3.7",
     "electron-prompt": "^1.7.0",
+    "electron-squirrel-startup": "^1.0.1",
     "undoredo.js": "^1.2.0"
   }
 }
